# invest-toy

./: .eslintrc.yaml  .gitattributes  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  build.ninja  deno.json  make.ps1  package-lock.json  package.json  print.ts  tsconfig.json
.github/workflows/: builder-image.yaml  verify.yaml
cli/: Cargo.toml
cli/src/: algorithm.test.ts  algorithm.ts  cli.rs  main.rs  main.ts  model.ts  override.ts  serde.rs  toy.rs  toy.ts  util.ts
cli/src/serde/: option_time.rs
json-schema/rust/: Cargo.toml
json-schema/rust/src/: .gitignore
json-schema/schema/: Input.json  Output.json  ProductMetric.json  StockAdvice.json  StockMetric.json  StockReport.json
src/: arithmetic_renderer.rs  clock.rs  config.rs  file_writer.rs  ibkr_client.rs  invest_advisor.rs  main.rs  notional_ranker.rs  progress_bar.rs  ranker.rs  report.rs  report_renderer.rs  scoring_factor_extractor.rs  stock_candidates.rs  stock_data_cacher.rs  stock_data_downloader.rs  stock_ranker.rs  table_printer.rs  toy.rs
src/ranker/: long_term_change_ranker.rs  notional_ranker.rs  pe_ratio_ranker.rs  short_term_change_ranker.rs
src/stock_ranker/: forward_ranker.rs  long_term_change_ranker.rs  mod.rs  negative_least_winning_ranker.rs  notional_ranker.rs  pe_ratio_ranker.rs  positive_greatest_winning_ranker.rs  positive_least_winning_ranker.rs  short_term_change_ranker.rs
stock-metric-collector/src/: collector.ts  main.ts  metric.ts  number.ts  playwright.ts  portfolio.ts  time.ts
stock-metric-collector/src/scrapper/: caching.ts  ishares.ts  market-stack.ts  market-watch.ts  yahoo-finance.ts
stock-ranker/: Cargo.toml
stock-ranker/main/: Cargo.toml
stock-ranker/main/src/: advisor.rs  arithmetic_renderer.rs  lib.rs  report.rs  scoring_candidate.rs
stock-ranker/main/src/ranker/: mod.rs  negative_least_winning_ranker.rs  notional_ranker.rs
stock-ranker/src/: Print-Advice.ps1  Print-Report.ps1  advisor.rs  main.rs  report.rs  scoring_candidate.rs
stock-ranker/src/ranker/: mod.rs  negative_least_winning_ranker.rs  positive_greatest_winning_ranker.rs
stock-ranker/wasm/: Cargo.toml
stock-ranker/wasm/src/: lib.rs
task/: cov.ps1  format-all.ps1  format-powershell.ps1  util.ps1  verify-formatting.ps1
web-extension/: package-lock.json  package.json  tsconfig.json
web-extension/src/: .gitignore  extract-price-change.js  extract-stock-metric.ts  manifest.json  query-dividend-yield.ts  service-worker.ts  yahoo-finance.ts
web-extension/src/blob/: execute.d.ts  execute.js  index.ts  navigate.ts  url.ts
web-extension/src/metric/: dividend-yield.ts  price-change.ts  (+1 more)
(+3 files in other folders)
