[package]
name = "ibkr-toy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.20"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
itertools = "0.10"
mockall = "0.11"
mockall_double = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "process"] }
