[package]
name = "ibkr-toy"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
bson = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }